<resources>
    <string name="app_name">Year In Pixels</string>
    <string name="preference_file_key">PixelData</string>
    <string name="rating_prompt">Overall mood today:</string>
    <string name="description_prompt">Add a description:</string>
    <string name="writing_prompt">Write something about your day</string>
    <string name="writing_button_description">Button for adding a description for the current day</string>
    <string name="date_placeholder_text">Placeholder for date</string>
    <string name="select_mood_warning">You must select a pixel color before saving!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="mood_placeholder_text">Mood placeholder</string>
    <string name="description_placeholder_text">Description placeholder</string>
    <string name="terrible">Terrible</string>
    <string name="bad">Bad</string>
    <string name="okay">Okay</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
    <string name="mood_icon_description">Mood emoticon for this date</string>
    <string name="settings">Settings</string>
    <string name="color_settings_title">Change your pixel colors:</string>
    <string name="edit_color_button_description">Button for editing the color of a pixel</string>
    <string name="save_changes">Save changes</string>
</resources>
