<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:id="@+id/saved_date_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/date_placeholder_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"/>

    <ImageView
        android:id="@+id/saved_mood_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_mood_okay_56dp"
        android:contentDescription="@string/mood_icon_description"/>

    <TextView
        android:id="@+id/saved_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_placeholder_text"
        android:textSize="16sp"/>
</LinearLayout>